<resources>
    <string name="_continue">Continue</string>
    <string name="_copy">copy</string>
    <string name="_new">new</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="active_windows">Active Windows</string>
    <string name="add">Add</string>
    <string name="add_save">Add Save</string>
    <string name="add_to_home_screen">Add to Home Screen</string>
    <string name="add_to_homescreen">Add to Homescreen</string>
    <string name="adrenotools_gpu_drivers">Adrenotools GPU Drivers</string>
    <string name="advanced">Advanced</string>
    <string name="all">All</string>
    <string name="analog_stick_settings">Analog Stick Settings</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Winlator</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arch">Arch</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="background">Background</string>
    <string name="backing_up_data">Backing up data...</string>
    <string name="binding">Binding</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_up">Binding Up</string>
    <string name="bindings">bindings</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="box64">Box64</string>
    <string name="box64_env_var_help__avx">"AVX and AVX2 implemented, along with BMI1, BMI2, ADX, FMA, F16C and RDANDR extension!&lt;br />&lt;br /> &lt;b>0&lt;/b> : Disable AVX extension&lt;br /> &lt;b>1&lt;/b> : enable AVX, BMI1, F16C and VAES extension.&lt;br /> &lt;b>2&lt;/b> : All 1 plus enable AVX2, BMI2, FMA, ADX,VPCLMULQDQ and RDRAND.&lt;br />
"</string>
    <string name="box64_env_var_help__dynarec_aligned_atomics">Generate aligned atomics only (only available on Arm64 for now).&lt;br />&lt;br /> &lt;b>0&lt;/b> : Generate unaligned atomics handling code.&lt;br /> &lt;b>1&lt;/b> : Generate aligned atomics only, which is faster and smaller code size, but will cause SIGBUS for LOCK prefixed opcodes operating on aligned data addresses.</string>
    <string name="box64_env_var_help__dynarec_bigblock">"Dynarec building BigBlock&lt;br />&lt;br /> &lt;b>0&lt;/b> : Don't try to build block as big as possible&lt;br /> &lt;b>1&lt;/b> : Build Dynarec block as big as possible&lt;br /> &lt;b>2&lt;/b> : Build Dynarec block bigger (continue when block overlaps, but only for blocks in elf memory)&lt;br /> &lt;b>3&lt;/b> : Build Dynarec block bigger (continue when block overlaps, for all types of memory)"</string>
    <string name="box64_env_var_help__dynarec_callret">Optimization of CALL/RET opcodes</string>
    <string name="box64_env_var_help__dynarec_df">Enable or disable the use of deferred flags.&lt;br />&lt;br /> &lt;b>0&lt;/b> : Disable the use of deferred flags.&lt;br /> &lt;b>1&lt;/b> : Enable the use of deferred flags.</string>
    <string name="box64_env_var_help__dynarec_dirty">Allow continue running a block that is unprotected and potentially dirty.&lt;br />&lt;br /> &lt;b>0&lt;/b> : Do not allow continue running a block that is unprotected and potentially dirty.&lt;br /> &lt;b>1&lt;/b> : Allow continue to run a dynablock that write data in the same page as code. It can gets faster in loading time of some game but can also get unexpected crashes.&lt;br /> &lt;b>2&lt;/b> : Will also, when it detect an HotPage, flag that page as NEVERCLEAN, and so it will not be write protected but Block build from that page will always be tested. It can be faster that way (but some SMC case might not be trapped).</string>
    <string name="box64_env_var_help__dynarec_fastnan">Generation of -NAN like on x86</string>
    <string name="box64_env_var_help__dynarec_fastround">Generation of precise x86 rounding</string>
    <string name="box64_env_var_help__dynarec_forward">Defines the max allowed forward value when building Block</string>
    <string name="box64_env_var_help__dynarec_nativeflags">Enable or disable the use of native flags.&lt;br />&lt;br /> &lt;b>0&lt;/b> : Do not use native flags.&lt;br /> &lt;b>1&lt;/b> : Use native flags when possible.</string>
    <string name="box64_env_var_help__dynarec_pause">Enable x86 PAUSE emulation, may help the performance of spinlocks.&lt;br />&lt;br /> &lt;b>0&lt;/b> : Ignore x86 PAUSE instruction.&lt;br /> &lt;b>1&lt;/b> : Use YIELD to emulate x86 PAUSE instruction.&lt;br /> &lt;b>2&lt;/b> : Use WFI to emulate x86 PAUSE instruction.&lt;br /> &lt;b>3&lt;/b> : Use SEVL+WFE to emulate x86 PAUSE instruction.</string>
    <string name="box64_env_var_help__dynarec_safeflags">Handling of flags on CALL/RET opcodes&lt;br />&lt;br /> &lt;b>0&lt;/b> : Treats CALL/RET as if it never needed flags (faster, unstable)&lt;br /> &lt;b>1&lt;/b> : Most RET will need flags, most CALLS will not&lt;br /> &lt;b>2&lt;/b> : All CALL/RET will need flags (slower)</string>
    <string name="box64_env_var_help__dynarec_strongmem">"Simulation of Strong Memory model&lt;br />&lt;br /> &lt;b>0&lt;/b> : Don't try anything special&lt;br /> &lt;b>1&lt;/b> : Enable some Memory Barrier when writing to memory (on some MOV opcode)&lt;br /> &lt;b>2&lt;/b> : All 1 plus a Memory Barrier on every write to memory using MOV&lt;br /> &lt;b>3&lt;/b> : All 2 plus Memory Barrier when reading from memory and on some SSE/SSE2 opcodes"</string>
    <string name="box64_env_var_help__dynarec_wait">Defines whether or not Dynarec will wait for the FillBlock to be ready</string>
    <string name="box64_env_var_help__dynarec_weakbarrier">Tweak memory barriers to reduce performance impact of strong memory emulation&lt;br />&lt;br /> &lt;b>0&lt;/b> : Use regular safe barriers&lt;br /> &lt;b>1&lt;/b> : Use weak barriers for mild performance boost&lt;br /> &lt;b>2&lt;/b> : Use weak barriers, additionally disable last write barriers</string>
    <string name="box64_env_var_help__dynarec_x87double">Use of Float/Double for x87 emulation</string>
    <string name="box64_env_var_help__maxcpu">Maximum number of CPUs presented to programs by Box64</string>
    <string name="box64_env_var_help__mmap32">Force every memory allocation in 32bit address spaces</string>
    <string name="box64_env_var_help__unityplayer">Detect UnityPlayer.dll and apply strongmem settings</string>
    <string name="box64_preset">Box64 Preset</string>
    <string name="box64_version">Box64 Version</string>
    <string name="brightness">Brightness</string>
    <string name="bring_to_front">Bring to Front</string>
    <string name="browse">Browse</string>
    <string name="button_a">Button A</string>
    <string name="button_b">Button B</string>
    <string name="button_grip">Grip button</string>
    <string name="button_trigger">Trigger button</string>
    <string name="button_x">Button X</string>
    <string name="button_y">Button Y</string>
    <string name="cache">Cache</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="container">Container</string>
    <string name="content_type">Content Type</string>
    <string name="csmt">CSMT (Command Stream Multi-Thread)</string>
    <string name="ddraw_wrapper">DDraw Wrapper</string>
    <string name="description">Description</string>
    <string name="dxvk_version">DXVK Version</string>
    <string name="edit">Edit</string>
    <string name="enable_touchscreen_haptics">Enable Touchscreen Haptic Feedback</string>
    <string name="enable_touchscreen_timeout">Touchscreen Timeout (Requires Restart)</string>
    <string name="enabled_async">Enable Async</string>
    <string name="enabled_async_cache">Enable Async Cache</string>
    <string name="export">Export</string>
    <string name="file_list">File List</string>
    <string name="frame_rate">Frame Rate</string>
    <string name="gpu_name">GPU Name</string>
    <string name="graphics_driver_available_extensions">Available Extensions</string>
    <string name="graphics_driver_bcn_emulation">BCn Emulation</string>
    <string name="graphics_driver_bcn_emulation_cache">BCn Emulation Cache</string>
    <string name="graphics_driver_bcn_emulation_type">BCn Emulation Type</string>
    <string name="graphics_driver_disable_present_wait">Disable KHR_present_wait</string>
    <string name="graphics_driver_max_device_memory">Max Device Memory</string>
    <string name="graphics_driver_present_modes">Present Modes</string>
    <string name="graphics_driver_resource_type">Memory Resource Type</string>
    <string name="graphics_driver_sync_frame">Sync Every Frame</string>
    <string name="graphics_driver_version">Graphics Driver Version</string>
    <string name="graphics_driver_vulkan_version">Vulkan Version</string>
    <string name="install_content">Install Content</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="offscreen_rendering_mode">Offscreen Rendering Mode</string>
    <string name="remove">Remove</string>
    <string name="save_path">Save Path</string>
    <string name="save_title">Save Name</string>
    <string name="select_directory">Select your save directory</string>
    <string name="select_save_path">Locate Save Folder</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="show_touchscreen_controls">Show Touchscreen Controls</string>
    <string name="strict_shader_math">Strict Shader Math</string>
    <string name="transfer">Transfer</string>
    <string name="type">Type</string>
    <string name="unregister">Unregister</string>
    <string name="up_directory">Up Directory</string>
    <string name="version">Version</string>
    <string name="version_code">Version Code</string>
    <string name="video_memory_size">Video Memory Size</string>
    <string name="vkd3d_feature_level">VKD3D Feature Level</string>
    <string name="vkd3d_version">VKD3D Version</string>
</resources>