<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="wrap_content" android:layout_height="232.0dip">
        <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="300.0dip" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_vulkan_version" />
            <Spinner android:entries="@array/vulkan_version_entries" android:id="@id/SGraphicsDriverVulkanVersion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_version" />
            <Spinner android:id="@id/SGraphicsDriverVersion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_available_extensions" />
            <com.winlator.cmod.widget.MultiSelectionComboBox android:id="@id/MSCAvailableExtensions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gpu_name" />
            <Spinner android:id="@id/SGraphicsDriverGPUName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_max_device_memory" />
            <Spinner android:entries="@array/device_memory_entries" android:id="@id/SGraphicsDriverMaxDeviceMemory" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_present_modes" />
            <Spinner android:entries="@array/present_mode_entries" android:id="@id/SGraphicsDriverPresentMode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_resource_type" />
            <Spinner android:entries="@array/resource_type_entries" android:id="@id/SGraphicsDriverResourceType" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_bcn_emulation" />
            <Spinner android:entries="@array/bcn_emulation_entries" android:id="@id/SGraphicsDriverBCnEmulation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_bcn_emulation_type" />
            <Spinner android:entries="@array/bcn_emulation_type_entries" android:id="@id/SGraphicsDriverBCnEmulationType" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_bcn_emulation_cache" />
            <Spinner android:entries="@array/bcn_emulation_cache_entries" android:id="@id/SGraphicsDriverBCnEmulationCache" android:layout_width="fill_parent" android:layout_height="wrap_content" android:spinnerMode="dialog" style="@style/ComboBox" />
        </LinearLayout>
    </ScrollView>
    <CheckBox android:id="@id/CBSyncFrame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_sync_frame" />
    <CheckBox android:id="@id/CBDisablePresentWait" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver_disable_present_wait" />
</LinearLayout>