<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/LLContent" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_title" />
        <EditText android:textSize="16.0sp" android:id="@id/ETTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:inputType="textCapSentences" style="@style/EditText" />
        <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/container" />
        <Spinner android:id="@id/SContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" style="@style/ComboBox" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/TVPath" android:padding="4.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/save_path" />
        <Button android:textSize="16.0sp" android:id="@id/BTPickPath" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_save_path" />
    </LinearLayout>
</ScrollView>