<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:id="@id/TVPickerTitle" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_directory" />
    <Button android:enabled="true" android:id="@id/upButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/up_directory" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recyclerView" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <Button android:enabled="false" android:id="@id/confirmButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/confirm_selection" />
</LinearLayout>