<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/icon_popup_menu_settings" android:id="@id/shortcut_settings" android:title="@string/settings" android:iconTint="@color/colorAccent" />
    <item android:icon="@drawable/icon_shortcut" android:id="@id/shortcut_add_to_home_screen" android:title="@string/add_to_home_screen" android:iconTint="@color/colorAccent" />
    <item android:icon="@drawable/icon_popup_menu_remove" android:id="@id/shortcut_remove" android:title="@string/remove" android:iconTint="@color/colorAccent" />
    <item android:icon="@android:drawable/ic_menu_share" android:id="@id/shortcut_export" android:title="Export" android:iconTint="@color/colorAccent" />
    <item android:icon="@drawable/icon_popup_menu_transfer" android:id="@id/shortcut_clone_to_container" android:title="Clone" android:iconTint="@color/colorAccent" />
    <item android:icon="@android:drawable/ic_menu_info_details" android:id="@id/shortcut_properties" android:title="Properties" android:iconTint="@color/colorAccent" />
</menu>