<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content" android:layout_height="200.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="300.0dip" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/type" />
            <TextView android:gravity="end" android:id="@id/TVType" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version" />
            <TextView android:gravity="end" android:id="@id/TVVersion" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version_code" />
            <TextView android:gravity="end" android:id="@id/TVVersionCode" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <View style="@style/HorizontalLine" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description" />
            <TextView android:id="@id/TVDesc" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
        <View style="@style/HorizontalLine" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/file_list" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/recyclerView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>