<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/content_type" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Spinner android:id="@id/SContentType" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/ComboBox" />
    </LinearLayout>
    <View style="@style/HorizontalLine" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/RecyclerView" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" app:layoutManager="LinearLayoutManager" xmlns:app="http://schemas.android.com/apk/res-auto" />
    <TextView android:textSize="24.0sp" android:gravity="center" android:id="@id/TVEmptyText" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/no_items_to_display" android:layout_weight="1.0" />
    <View style="@style/HorizontalLine" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/BTInstallContent" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/install_content" android:layout_weight="1.0" style="@style/ButtonNeutral" />
    </LinearLayout>
</LinearLayout>